# ros2-learning

./: .gitignore  Dockerfile  Dockerfile-humble  Readme.md  bashrc  docker-compose.yml  entrypoint-humble.sh  entrypoint.sh
src/first_robot/: CMakeLists.txt  package.xml
src/first_robot/config/: controller_manager.yaml  controller_simple.yaml  controller_simple_snipdog.yaml  controller_test_snipdog.yaml  default.rviz  nav2_params.yaml  ros_control.yaml  slam_config.yaml  twist_cmd.yaml  view_bot.rviz
src/first_robot/config/champ/: gaits.yaml  joints.yaml  (+2 more)
src/first_robot/description/: bodi.urdf  camera.xacro  constants.xacro  depth_camera.xacro  gz_control.xacro  gz_control_snipdog.xacro  imu_link.xacro  inertial_base.xacro  leg_block.xacro  leg_block_v2.xacro  leg_block_v3.xacro  leg_macro.xacro  lidar_2d_camera.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_ver_snipdog.xacro  single_legged_robot.xacro  transmission_block.xacro
src/first_robot/inteligent/: action_scheduler.py  obstacle_avoid_node.py  obstacle_avoid_node_by_camera.py  obstacle_avoid_node_by_depth_camera.py  patrol_node_tf_and_odom.py  semantic_explorer.py  smart_move.py
src/first_robot/launch/: launch_grade2_gazebo.launch.py  launch_grade2_rviz.launch.py  launch_grade3_gazebo.launch.py  launch_sim.launch.py  launch_sim_gazebo.launch.py  launch_sim_rviz.launch.py  launch_sim_simple.launch.py  rsp.launch.py  test_forward_position_controller.launch.py
src/first_robot/move/: dog_gait_cycle.py  gait_cycle_publisher.py  patrol_mover.py  random_mover.py
src/first_robot/scripts/: maze_generator.py  random_twist_publisher.py  twist_to_twiststamped.py  twist_to_twiststamped_node.py
src/first_robot/worlds/: camera_sensor.sdf  empty.world  maze_world.world  obstacles.world  simple_lidar_test.sdf
(+8 files in other folders)
